[project]
name = "kubernetes-charm-libraries"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops",
    "lightkube",
    "lightkube-models",
]

[dependency-groups]
test = [
    "coverage[toml]",
    "pytest",
]
dev = [
    "codespell",
    "pyright",
    "ruff",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.ruff_cache,.coverage"
